feat: introduce OrderItemCreateRequest and OrderItemResponse DTOs, refactor OrderService to use new request/response models